--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - discovery.type=single-node
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - xpack.security.enabled=true
+      - xpack.security.enabled=false
       - xpack.security.http.ssl.enabled=true
       - xpack.security.http.ssl.key=certs/localhost/localhost.key
       - xpack.security.http.ssl.certificate_authorities=certs/localhost/localhost.crt
